rusty-cdk-macros/tests/fails/message_retention_period_too_low.stderr
error: value should be at least 60
 --> tests/fails/message_retention_period_too_low.rs:4:44
  |
4 |     let period = message_retention_period!(30);
  |                                            ^^
